Added break and continue support